# DI-Bootcamp

./: Projet_BERT_SMS_SPAM_FR_v2.ipynb  daily_challenge_week2_day2_hands_on_transformation_visualisation.ipynb  exercice_week2_day2.ipynb  feedback_20250612_200020.txt  feedback_20250612_201542.txt
WEEK0/: number_guessing_game.ipynb
WEEK0/day1/: cours_week1_day1.ipynb  d1_w1_resultat_exercice.ipynb
WEEK0/day2/: cours_week1_day2.ipynb  d2_w1_resultat_exercice.ipynb
WEEK0/day3/: cours_week1_day3.ipynb
WEEK0/day4/: d4_w1_resultat_exercice.ipynb
WEEK1/: exo_bonus.ipynb
WEEK1/day2/: cours_week2_day2.ipynb
WEEK1/day3/: cours_week2_day3.ipynb  d3_w2_resultat_exercice.ipynb
WEEK1/day4/: cours_week2_day4.ipynb
WEEK13/Daily_challenge2/: agent_core.py  agentic_rag.ipynb  app.py  requirements.txt
WEEK13/miniprojet/: README.md  architecture_projet.txt  pyproject.toml
WEEK13/miniprojet/app/: app.py  llm_client.py  log_utils.py  orchestrator.py
WEEK13/miniprojet/config/: mcp_servers.json
WEEK13/miniprojet/servers/: citation_cleaner_server.py
WEEK13/miniprojet2/mini-mcp-research-notebook-part2-FULL/: Makefile  README.md  SESSION_OK.txt  compose.yaml  pyproject.toml  requirements.txt
WEEK13/miniprojet2/mini-mcp-research-notebook-part2-FULL/app/: app.py  config.py  llm_client.py  log_utils.py  orchestrator.py
WEEK13/miniprojet2/mini-mcp-research-notebook-part2-FULL/config/: mcp_servers.json
WEEK13/miniprojet2/mini-mcp-research-notebook-part2-FULL/servers/: citation_cleaner_server.py  scholar_plus_server.py
day3/: cours_week2_day3.ipynb
(+88 files in other folders)
