[project]
name = "mini-mcp-research-notebook"
version = "0.1.0"
description = "Application de recherche avec intégration de serveurs MCP tiers"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "groq>=0.3.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "servers", "config"]

[project.scripts]
start-app = "app.app:main"
start-citation-server = "servers.citation_cleaner_server:main"